[package]
name = "gnostr-cat"
description = "Nostcat fork for gnostr relay scripting"
version = "0.0.5"
edition = "2021"
repository = "https://github.com/gnostr-org/gnostr-cat"
license-file = "LICENSE"
readme = "README.md"
keywords = ["nostr", "gnostr", "git", "nostcat"]

[[bin]]
name = "gnostr-cat"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.26"
env_logger = "0.9.0"
log = "0.4.0"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread", "sync"] }
tungstenite = {version = "0.18.0", features = ["native-tls"]}
url = "2.2.2"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
